[project]
name = "semid-py"
version = "0.1.0"
description = "Python implementation of SEMID"
readme = "README.md"
authors = [
    { name = "tuomas", email = "ty.pirhonen@tum.de" }
]
requires-python = ">=3.14"
dependencies = [
    "igraph>=0.11.9",
    "numpy>=2.3.3",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
