[project]
name = "semid"
version = "0.1.0"
description = "Python implementation of SEMID"
readme = "README.md"
authors = [
    { name = "tuomas", email = "ty.pirhonen@tum.de" }
]
requires-python = ">=3.12"
dependencies = [
    "igraph>=0.11.9",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "scipy>=1.13",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "marimo>=0.19.11",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "tqdm>=4.67.1",
]
r-comparison = [
    "rpy2>=3.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "r_comparison: tests that compare Python implementation against R (requires R and rpy2)",
]
addopts = "-m 'not r_comparison'"
