[project]
name = "semid"
version = "0.1.0"
description = "Python implementation of SEMID"
readme = "README.md"
authors = [
    { name = "tuomas", email = "ty.pirhonen@tum.de" }
]
requires-python = ">=3.12"
dependencies = [
    "igraph>=0.11.9",
    "matplotlib>=3.9",
    "numpy>=2.4.3",
    "scipy>=1.17.1",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "marimo>=0.20.4",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.6.0",
    "tqdm>=4.67.3",
]
r-comparison = [
    "rpy2>=3.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "r_comparison: tests that compare Python implementation against R (requires R and rpy2)",
]
addopts = "-m 'not r_comparison' -n auto"
